<resources>

    <string name="poketracker">Poke - Tracker</string>
    <string name="register_new_catch">Register new catch</string>
    <string name="national_number">National Number</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="level">Level</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unk">Unk</string>
    <string name="numberDefault">896</string>
    <string name="m">m</string>
    <string name="_0">0</string>
    <string name="nameDefault">Glastrier</string>
    <string name="speciesDefault">Wild Horse Pokemon</string>
    <string name="title_activity_pokemon_list">PokemonListActivity</string>
</resources>