<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".model.PokedexActivity">


        <TextView
            android:id="@+id/headerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poketracker"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:id="@+id/subtitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_new_catch" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/numberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/national_number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/numberET"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="28dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/numberDefault"
                android:inputType="number"
                android:maxLength="4" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="96dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nameDefault"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/speciesTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species" />

            <EditText
                android:id="@+id/speciesET"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/speciesDefault"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/genderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/genderG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/femaleB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/maleB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/unknownB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/unk"
                    android:checked="true" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/heightTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heightTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_weight="1"
                app:placeholderText="2.2"
                app:suffixText=" m">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightTIL_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textSize="11sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/weightTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightTIL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                app:placeholderText="800.0 Kg"
                app:suffixText=" Kg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weightTIL_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textSize="11sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/levelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level" />

            <Spinner
                android:id="@+id/levelS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1" />
        </LinearLayout>


        <TextView
            android:id="@+id/statsTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/base_stats"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/hpTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp" />

            <EditText
                android:id="@+id/hpET"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="96dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_0"
                android:inputType="number" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/attackTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack" />

            <EditText
                android:id="@+id/attackET"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="72dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_0"
                android:inputType="number" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/defenseTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense" />

            <EditText
                android:id="@+id/defenseET"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/_0"
                android:inputType="number" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp">

            <Button
                android:id="@+id/resetB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/saveB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
